Fix: homepage custom sections alignment

--- a/app/assets/stylesheets/organizations/home-section/_institutions-users.scss
+++ b/app/assets/stylesheets/organizations/home-section/_institutions-users.scss
@@ -6,15 +6,17 @@ body.#{$theme} {
     justify-content: space-between;
     align-items: center;
     margin-top: 32px;
-
-    & > img {
+    a, a:hover {
+        text-decoration: none;
+    }
+    img {
         max-height: 130px;
         flex: 0;
     }
 
     @include breakpoint(medium) { 
         justify-content: center;
-        & > img {
+        img {
             margin: 8px;
         }
     }
